fix visibility of select dropdown in Last Launched Experiments

--- a/frontend/src/components/DashboardPage.scss
+++ b/frontend/src/components/DashboardPage.scss
@@ -27,3 +27,7 @@
     transform: unset;
     z-index: unset;
 }
+
+.ant-select-content-value {
+    visibility: unset !important;
+}
